# market

backend/: alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml  settings.py
backend/migrations/: env.py
backend/migrations/versions/: 3055b8b64f18_add_unique_true.py  b51d0256161d_change_datatype_in_table_role.py  b7e2b4ce8006_.py  b8086134d993_add_params_for_product_product_name.py  fa45fadcf43f_.py
backend/models/: database.py  models.py
backend/routers/: item.py  user.py
backend/src/: database.py  main.py  settings.py  utilits.py
backend/src/auth/: auth.py  shemas.py  utilits.py
backend/src/product/: product.py  shemas.py  utilits.py
frontend/: Tovar.HTML  Verst.Html  login.html  reg.html
frontend/Css/: style.css
frontend/asd/: package-lock.json  package.json
frontend/asd/src/: App.css  App.js
frontend/asd/src/Components/Cards/: cards.jsx  style_cards.css
frontend/asd/src/Components/Filter/: filter.jsx  style_filter.css
frontend/asd/src/Components/Footer/: footer.jsx  style_footer.css
frontend/asd/src/Components/Header/: header.jsx  style_header.css
frontend/asd/src/Components/Item/: item.jsx  style_item.css
frontend/asd/src/Components/sign_up/: sign.jsx  style_sign.css
gg/asd/src/Components/Log_in/: log_in.jsx
